--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,8 +1,8 @@
 {
   "lock": "./deno.lock",
   "tasks": {
-    "udd": "deno run -r --allow-read=. --allow-write=. --allow-net https://deno.land/x/udd/main.ts deps.ts && deno task lock",
-    "lock": "deno cache --lock=deno.lock --lock-write deps.ts",
-    "all": "deno task udd && deno lint && deno fmt"
+    "udd": "deno run -r --allow-read=. --allow-write=. --allow-net https://deno.land/x/udd/main.ts deps.ts developer_deps.ts && deno task lock",
+    "lock": "deno cache --lock=deno.lock --lock-write deps.ts developer_deps.ts",
+    "all": "deno task udd && deno lint && deno fmt && deno test"
   }
 }
