replace deps.ts with deno.jsonc imports

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,8 +1,8 @@
 {
-  "lock": "./deno.lock",
-  "tasks": {
-    "udd": "deno run -r --allow-read=. --allow-write=. --allow-net https://deno.land/x/udd/main.ts deps.ts developer_deps.ts && deno task lock",
-    "lock": "deno cache --lock=deno.lock --lock-write deps.ts developer_deps.ts",
-    "all": "deno task udd && deno lint && deno fmt && deno test"
+  "imports": {
+    "@std/assert": "jsr:@std/assert@^0.222.1",
+    "discord-api-types": "https://deno.land/x/discord_api_types@0.37.79/v10.ts",
+    "tweetnacl": "npm:tweetnacl@^1.0.3",
+    "discord_app/": "./"
   }
 }
