--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,8 +1,11 @@
 {
+  "name": "@discord-applications/app",
+  "version": "0.0.1",
+  "exports": "./mod.ts",
   "imports": {
     "@std/assert": "jsr:@std/assert@^0.222.1",
     "discord-api-types": "https://deno.land/x/discord_api_types@0.37.79/v10.ts",
     "tweetnacl": "npm:tweetnacl@^1.0.3",
-    "discord_app/": "./"
+    "app/": "./"
   }
 }
