--- a/deno.jsonc
+++ b/deno.jsonc
@@ -7,5 +7,8 @@
     "discord-api-types": "npm:discord-api-types@0.37.79/v10",
     "tweetnacl": "npm:tweetnacl@^1.0.3",
     "app/": "./"
+  },
+  "tasks": {
+    "check": "deno check ./mod.ts ./examples/*.ts"
   }
 }
